blog/blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: blog
        image: registry.flou21.de/coflnet-blog:d8279fb2-421d-4b90-ba11-9546fc99a4c8
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: "25Mi"
            cpu: "10m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: blog
spec:
  selector:
    app: blog
  ports:
    - port: 80
      targetPort: 80
